Fix design bugs (#576)
* fix: vertically balance spacing

* fix: switch to horizontal footer links on larger width

because the footer links were causing the footer to become
too wide which caused horizontal scroll in some cases.

also add max width to avoid scroll

* fix: only apply two column when viewport is large enough

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -516,7 +516,7 @@ li a {
   }
 }
 
-@media screen and (width <= 550px) {
+@media screen and (width <= 850px) {
   .footer__items {
     grid-auto-flow: row;
   }
